Update Blog “2018-05-14-test”

--- a/src/pages/blog/2018-05-14-test.md
+++ b/src/pages/blog/2018-05-14-test.md
@@ -10,18 +10,12 @@ tags:
 ---
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
 
+The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
 
+![](/static/img/screen shot 2018-04-18 at 1.41.55 pm.png)
 
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
 
-
-
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
-
-
-
-The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
-
-
 
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
