Update Blog “2018-05-14-test”

--- a/src/pages/blog/2018-05-14-test.md
+++ b/src/pages/blog/2018-05-14-test.md
@@ -10,7 +10,7 @@ tags:
 ---
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
 
-![](/static/img/1304617.jpg)
+![](/static/img/chemex.jpg)
 
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
 
