Update Blog “2018-05-14-test”

--- a/src/pages/blog/2018-05-14-test.md
+++ b/src/pages/blog/2018-05-14-test.md
@@ -2,9 +2,10 @@
 templateKey: blog-post
 title: Test
 date: 2018-05-14T18:36:20.561Z
-description: |+
-  The root of the problem is this: 
-
+description: >
+  The root of the problem is thismex probably seems like a complicated,
+  time-consuming ordeal, but once you get used to the process, it becomes a
+  soothing ritual that's worth the effort every time.
 tags:
   - test
 ---
