Update Blog “2018-05-14-test”

--- a/src/pages/blog/2018-05-14-test.md
+++ b/src/pages/blog/2018-05-14-test.md
@@ -9,6 +9,8 @@ description: >
 tags:
   - test
 ---
+![](/static/img/brandblack_jan2018_rrp_1130-565x372.jpg)
+
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
 
 The root of the problem is this: How do you make something appear onscreen, in response to an event, in this new world where all you have is props and state? How can you make something happen?
